--- a/2index.html
+++ b/2index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <h1 id="rainbow-text">Anup Adhikari Creative Portfolio</h1>
+        <h1>Anup Adhikari Creative Portfolio</h1>
         <p>A showcase of my video work over the years</p>
         <div class="filters">
             <button data-category="all" class="active">All</button>
             <button data-category="music">Music Videos</button>
             <button data-category="events">Event Coverage</button>
             <button data-category="podcast">Podcast</button>
+            
         </div>
     </header>
     <main>
