Addition of All Works

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <button data-category="all" class="active">All</button>
             <button data-category="music">Music Videos</button>
             <button data-category="events">Event Coverage</button>
-            <button data-category="podcast">Podcast</button>
-        </div>
+            <button data-category="film">Films</button>
+            <button data-category="youtube">YouTube Show</button>
+        </div>        
     </header>
     <main>
         <div id="video-gallery" class="video-gallery">
